# cigpose-onnx

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run_onnx.py  stereo_calibrate.py  stereo_infer.py
cigpose/: __init__.py  cli.py
models/: README.md
viewer/: index.html
